Revert "store selected cosmetics and fix memory leak with maps"
This reverts commit fdde29c4aa4f344f6118940afe9746b08c5515d5.